--- a/templates/histogramme.html
+++ b/templates/histogramme.html
@@ -1,8 +1,7 @@
-<!DOCTYPE html>
-<html lang="fr">
+<html>
 <head>
   <meta charset="UTF-8">
-  <title>Diagramme à Colonnes - Météo Paris</title>
+  <title>Histogramme</title>
   <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 </head>
 <body>
