--- a/templates/histogramme.html
+++ b/templates/histogramme.html
@@ -14,50 +14,21 @@
         // Convertir les données en tableau Google Charts
         var dataTable = new google.visualization.DataTable();
         dataTable.addColumn('string', 'Date');
-        dataTable.addColumn('number', 'Température Minimale');
-        dataTable.addColumn('number', 'Température Maximale');
+        dataTable.addColumn('number', 'Valeur');
         data.results.forEach(entry => {
           var date = new Date(entry.Jour * 1000);
-          dataTable.addRow([date.toLocaleDateString(), entry.tempmin, entry.tempmax]);
+          dataTable.addRow([date.toLocaleDateString(), entry.temp]);
         });
-
-        // Déterminer l'échelle optimale pour l'axe vertical
-        var vAxisRange = google.visualization.getScaleRange(dataTable, 1);
-
         // Configuration du diagramme à colonnes
         var options = {
           title: 'Évolution des températures de Paris pour les 16 prochains jours',
+          // Type de graphique : 'column' pour un diagramme à colonnes
           chartType: 'column',
-          legend: { position: 'bottom' },
-          series: {
-            // Série pour les températures minimales
-            0: { color: '#336699' },
-            // Série pour les températures maximales
-            1: { color: '#993366' }
-          },
-          vAxis: {
-            // Utilisation de l'échelle automatique
-            minValue: vAxisRange.min,
-            maxValue: vAxisRange.max,
-            // Afficher les valeurs des repères
-            gridlines: {
-              count: 10,
-              labels: {
-                format: '#°C'
-              }
-            }
-          },
-          hAxis: {
-            gridlines: {
-              count: 4
-            }
-          }
+          legend: { position: 'bottom' }
         };
-
         var chart = new google.visualization.ColumnChart(document.getElementById('chart_div'));
         chart.draw(dataTable, options);
       }
-
       // Récupération des données depuis l'API
       fetch('/tawarano/')
         .then(response => response.json())
